--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 .toggle-button {
   position: relative;
   top: 20px;
-  left: calc(100% - 80px);
+  /* left: calc(100% - 80px); */
 }
 
 .sidebar {
@@ -23,7 +23,7 @@
 
 .sidebar-collapse {
   position: fixed;
-  margin-left: -43vw;
+  /* margin-left: -43vw; */
   transition: margin-left 0.5s;
 }
 
@@ -34,7 +34,7 @@
 .center-iframe {
   width: 100%;
   height: 98vh;
-  padding-left: 7vw;
+  /* padding-left: 7vw; */
 }
 
 .form-group {
